[package]
name = "pyo3_cheatsheet"
version = "0.1.0"
authors = ["dugu9sword <dugu9sword@163.com>"]
edition = "2018"

[lib]
name = "pyo3_cheatsheet"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]